# FEM

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
examples/: .opt  batman.geo  batman.ipynb  beam_column.ipynb  calibrated_beam.ipynb  ex00.ipynb  ex01.ipynb  ex02.ipynb  midtermn_01.ipynb  plate_with_hole.ipynb  stress_concentrations.ipynb  sw_00.ipynb  testing_elements.ipynb  wrench.ipynb
examples/examples_1D/: beam_column.ipynb  ex01.ipynb  ex02.ipynb  ex03.ipynb
examples/examples_2D/: calibrated_beam.h5  calibrated_beam.ipynb  for_students.ipynb  midtermn_01.ipynb  stress_concentrations.ipynb  sw_00.ipynb  wrench.ipynb
examples/geo_files/: batman.ipynb  batman_gmsh_to_opensees.ipynb
examples/modal_openseespy/: example.geo  modal.ipynb
examples/quadrature_gauus/: quadrature_gauss.ipynb
examples/shape_functions/: CST_ShapeFunctions.ipynb  LST_Gauss.ipynb  LST_ShapeFunctions.ipynb  QUAD4_ShapeFunctions.ipynb  QUAD9_ShapeFunctions.ipynb  REVISAR.ipynb  basic_elements_N.ipynb
examples/tunnel/: 1000_06_Point06.geo  1000_06_Point06.stp  gmsh_to_opensees.ipynb
examples/validation/: CST_distorted.json  CST_regular.json  LST_distorted.json  LST_regular.json  Quad4_distorted.json  Quad4_regular.json  Quad9_distorted.json  Quad9_regular.json
examples/validation_ex/: validation_ex.ipynb
examples/validation_fem/: CST_distorted.json  CST_regular.json  LST_distorted.json  LST_regular.json  Quad9_distorted.json  Quad9_regular.json  validation_elements_fem.ipynb  validation_students_fem.ipynb
fem/: __init__.py
fem/core/: Node.py  (+1 more)
(+110 files in other folders)
