[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fem"
version = "0.1.0"
description = "A Python library for structural analysis using the Finite Element Method"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Patricio Palacios B.", email = "pxpalacios@miuandes.cl" },
    { name = "Nicolas Mora Bowen", email = "nmora@miuandes.cl" }
]
keywords = ["FEM", "finite element", "structural analysis", "civil engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "matplotlib",
    "gmsh",
    "ipywidgets",
    "jupyter"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/ppalacios92/FEM"
Repository = "https://github.com/ppalacios92/FEM"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fem", "fem.core", "fem.elements", "fem.sections", "fem.utils"]

[tool.setuptools.package-data]
fem = ["py.typed"]